--- a/codesquare/src/main/resources/templates/member/myPage/myAppliedList.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myAppliedList.html
@@ -9,14 +9,33 @@
 
 	나의 신청내역
 
+	<div th:each="list : ${list}">
+		<ul class="list-group list-group-flush">
+			<li class="list-group-item">
+			<span th:text="${list.applyDate}"></span>
+			<span th:text="${list.title}"></span> 
+			<span th:text="${list.status} =='' ? '없을무' : ''"></span>
+			 <span th:text="${list.applyContent}"></span>
+			 </li>
+		</ul>
+	</div>
+
 	<div>신청날짜 신청내역 상태 신청메세지</div>
 	<div th:each="list : ${list}">
-		<span th:text="${list.applyDate}"></span>
-		<span th:text="${list.title}"></span>
-		<span th:text="${list.status}"></span>
-		<span th:text="${list.applyContent}"></span> 
+		<span th:text="${list.applyDate}"></span> <span
+			th:text="${list.title}"></span> <span
+			th:text="${list.status} =='' ? '없을무' : ''"></span> <span
+			th:text="${list.applyContent}"></span>
 
 	</div>
-<br /> <br /> <br /> <br />
+	
+	
+	
+	
+	<br />
+	<br />
+	<br />
+	<br />
+	<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 </body>
 </html>
