드디어 ajax  해결!!!!!

--- a/codesquare/src/main/resources/templates/member/myPage/myPage2.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myPage2.html
@@ -7,7 +7,9 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
-
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<!-- default header name is X-CSRF-TOKEN -->
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 <body>
 <div class="container" layout:fragment="content">
