--- a/codesquare/src/main/resources/templates/member/login/signUp.html
+++ b/codesquare/src/main/resources/templates/member/login/signUp.html
@@ -3,9 +3,12 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
-
-<title>Insert title here</title>
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<!-- default header name is X-CSRF-TOKEN -->
 <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+<title>Insert title here</title>
+
+
 <body>
 <div class="container" layout:fragment="content">
 	<form id="signUpForm" method="post">
@@ -16,7 +19,7 @@
 			아이디: <input type="text" name="userId" id="userId" required /> <span
 				id="idValidate">중복확인</span> <br />
 				<span id="idCheckMsg">아이디는 영문,숫자 최소
-				5자 이상 20자 이하 아이디 중복 확인 하세요.</span>
+				5자 이상 20자 이하 아이디</span>
 		</div>
 		<div>
 			이름: <input type="text" id="name" name="name" required>
@@ -25,10 +28,10 @@
 			생년월일: <input type="date" name="dateOfBirth" required>
 		</div>
 		<div>
-			비밀번호: <input type="password" id="password" name="password" required>
+			비밀번호: <input type="password" autocomplete=​new-password id="password" name="password" required>
 		</div>
 		<div>
-			비밀번호확인: <input type="password" id="rePassword" name="rePassword"
+			비밀번호확인: <input type="password" autocomplete=​new-password id="rePassword" name="rePassword"
 				required><span id="pwCheckMsg">비밀번호는 영문,숫자를 포함한 최소 6자
 				이상 20자 이하 </span>
 		</div>
