--- a/codesquare/src/main/resources/templates/room/companyList.html
+++ b/codesquare/src/main/resources/templates/room/companyList.html
@@ -6,8 +6,11 @@ layout:decorator="layout/mainLayout">
 <meta charset="utf-8">
 <head>
 
-<link rel="stylesheet" type="text/css" href="/static/styles/room/datepicker.min.css" th:href="@{/static/styles/room/datepicker.min.css}">
-  
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link href="static/styles/room/datepicker.min.css" rel="stylesheet" type="text/css">
+<script src="static/js/room/datepicker.min.js"></script>
+<script src="static/js/room/i18n/datepicker.en.js"></script>
+
   <style type="text/css">
   input {
   border: 1px solid #542672;
@@ -19,18 +22,37 @@ layout:decorator="layout/mainLayout">
 	border-radius: 5px;
 }
 </style>
+
+  <script>
+  $(function() {
+	    $( "#testDatepicker" ).datepicker({
+	    	language: 'en',
+	    	dateFormat: 'yyyy-mm-dd',
+	        minDate: new Date()
+	    });
+	});
+  $(document).ready(function () {
+      // 콤보박스가 변경될 때 
+      $('#lstFavorites').change(function () {
+          // 드롭다운리스트에서 선택된 값을 텍스트박스에 출력
+          var selectedText = // $("#lstFavorites option:selected").text();
+              // $("option:selected").text();
+              $(":selected").text();  // 드롭다운리스트가 하나밖에 없다면 이렇게 써도 됨
+          $('#txtFavorite').val(selectedText);
+      });
+  });
+  </script>
 </head>
 <body>
 <div class="container" layout:fragment="content">
 
 <br>
-
 						<div class="search_box_container d-flex flex-row align-items-center justify-content-start" style="background-color: #542672">
 							<div class="search_form_container">
 								<form action="search" id="search_form" class="search_form">
 									<div class="">
 										<ul class="search_form_list d-flex flex-row align-items-center">
-											<input type="text" id="testDatepicker" placeholder="날짜선택" style="height: 60px">
+											<input type="text" id="testDatepicker" placeholder="연도/월/일" style="height: 60px" autocomplete="off">
 											<select name="searchOption" style="height: 60px" id="lstFavorites">
 												<option value="address">지역</option>
 												<option value="address">강남구</option>
@@ -60,22 +82,14 @@ layout:decorator="layout/mainLayout">
                   						<span th:text="${Company.address}"></span>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#myModal">방 정보</button> -->
                     </div>
-                    <!-- <small class="text-muted">9 mins</small> --> 
                   </div>
                 </div>
               </div>
             </div>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.6/holder.min.js"></script>
 		</div>
-		
 
-<th:block layout:fragment="script">
-<script th:src="@{/static/js/room/datepicker.js}"></script>
-<script th:src="@{/static/js/room/picker.js}"></script> 
-<script th:src="@{/static/js/room/i18n/datepicker.en.js}"></script>
-</th:block>
 </div>
 </body>
 </html>
