--- a/codesquare/src/main/resources/static/styles/lecture/lectureCustom.css
+++ b/codesquare/src/main/resources/static/styles/lecture/lectureCustom.css
@@ -634,3 +634,108 @@
 #lecture-content label:hover{
 	font-size:25px;
 }
+.lecture-list-container{
+  position:absolute;
+  top:60px;
+  left:100%;
+  z-index: 1000;
+}
+.lecture-list-container>a:hover{
+	font-weight: bold;
+}
+
+
+
+/*return to top icon style*/
+#top{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#top i{
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#top:hover{
+    background: rgba(0, 0, 0, 0.9);
+}
+#top:hover i{
+    color: #fff;
+    top: 5px;
+}
+
+
+
+
+/*lecture writer page style*/
+.lecture-write-container div:not(.lecture-btn-container){
+  width:100%;
+  content:"";
+  border-bottom:2px solid gray;
+  margin-bottom:5px;
+}
+.lecture-video{
+  height:512px;
+  border: 1px solid #f2f2f2;
+}
+.lecture-video>i{
+  position:absolute;
+  display:inline;
+  top:40%;
+  left:45%;
+  opacity:0.7;
+}
+.lecture-video>span{
+  position:absolute;
+  top:58%;
+  left:39%;
+}
+.lecture-video>i:hover,.lecture-video>span:hover{
+  cursor:pointer;
+  opacity:0.9;
+  /* font-weight:bold; */
+}
+#url{
+  margin-bottom:5px;
+  width: 100%;  
+  height:40px;
+  border: dashed 2px gray;
+}
+.lecture-write-container input{
+  all:unset;
+  width:100%;
+  height:70px;
+  
+}
+#lectureIntro-selectbox{
+}
+input[name="parent-title"]{
+  height:100%;
+  width:100%;
+  font-size:25px;
+  border-bottom:2px solid gray;  
+}
