--- a/codesquare/src/main/resources/templates/lecture/lectureView.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureView.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 
@@ -129,7 +128,7 @@
 			<div id="lecture-footer" class="col-sm-12 "></div>
 		</div>
 		<!-- Return to Top -->
-		<a href="javascript:" id="top"><i class="fas fa-chevron-up"></i></i></a>
+		<a href="javascript:" id="top"><i class="fas fa-chevron-up"></i></a>
 	</div>
 	<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 	<script th:src="@{/webjars/popper.js/1.14.6/umd/popper.min.js}"></script>
