--- a/codesquare/src/main/resources/templates/member/login/signUp.html
+++ b/codesquare/src/main/resources/templates/member/login/signUp.html
@@ -28,10 +28,10 @@
 			생년월일: <input type="date" name="dateOfBirth" required>
 		</div>
 		<div>
-			비밀번호: <input type="password" autocomplete=​new-password id="password" name="password" required>
+			비밀번호: <input type="password"  id="password" name="password" required>
 		</div>
 		<div>
-			비밀번호확인: <input type="password" autocomplete=​new-password id="rePassword" name="rePassword"
+			비밀번호확인: <input type="password" id="rePassword" name="rePassword"
 				required><span id="pwCheckMsg">비밀번호는 영문,숫자를 포함한 최소 6자
 				이상 20자 이하 </span>
 		</div>
